# rustybt

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CI_CD_FIX_PLAN.md  CONTRIBUTING.md  MANIFEST.in  README.md  TEST_RESULTS.md  benchmark-baseline.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_float_baseline.json  0002_decimal_backtest.json
.claude/: settings.json
.github/workflows/: benchmarks.yml  ci.yml  code-quality.yml  dependency-security.yml  nightly-benchmarks.yml  performance.yml  property-tests.yml  security.yml  testing.yml
.ignore/: IDEAS.md  brainstorming-session-results.md  brief.md  my-prompts.txt
DOCUMENTATION-SETUP/: index.html
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
api/CODE_VALIDATION/: index.html
api/analytics/: index.html
api/analytics-api/: index.html
api/bundle-metadata-api/: index.html
api/caching-api/: index.html
api/data-management/: index.html
api/datasource-api/: index.html
api/finance-api/: index.html
api/live-trading/: index.html
api/live-trading-api/: index.html
api/optimization/: index.html
api/optimization-api/: index.html
api/order-management/: index.html
api/order-types/: index.html
api/portfolio-management/: index.html
api/testing/: index.html
architecture/: index.html
architecture/EPIC-X2-APPROVED-README/: index.html
architecture/adapter-bundle-bridge/: index.html
architecture/build-system/: index.html
architecture/change-log/: index.html
architecture/checklist-results-report/: index.html
architecture/coding-standards/: index.html
architecture/component-architecture/: index.html
architecture/data-catalog/: index.html
architecture/data-models-and-schema-changes/: index.html
architecture/enhancement-scope-and-integration-strategy/: index.html
architecture/epic-10-documentation-architecture/: index.html
architecture/epic-6-critical-docs-reference/: index.html
architecture/epic-6-gap-analysis-and-fixes/: index.html
architecture/epic-7-rust-optimization-plan/: index.html
architecture/epic-X1-unified-data-architecture/: index.html
architecture/epic-X2-architectural-compliance-review/: index.html
architecture/epic-X2-final-approval/: index.html
architecture/epic-X2-remediation-required/: index.html
architecture/epic-X2-review-index/: index.html
architecture/existing-project-analysis/: index.html
architecture/external-api-integration/: index.html
architecture/infrastructure-and-deployment-integration/: index.html
architecture/introduction/: index.html
architecture/live-trading/: index.html
architecture/next-steps/: index.html
architecture/optimization/: index.html
architecture/security-integration/: index.html
architecture/shadow-trading-summary/: index.html
architecture/source-tree/: index.html
architecture/strategy-reusability-guarantee/: index.html
architecture/tech-stack/: index.html
architecture/testing-strategy/: index.html
architecture/unified-data-management/: index.html
architecture/zero-mock-enforcement/: index.html
architecture/zipline-architecture-analysis/: index.html
benchmarks/: baseline_float_backtest.py  calculate_overhead.py  conftest.py  decimal_backtest.py  decimal_data_pipeline_benchmark.py  decimal_ledger_benchmark.py  decimal_metrics_benchmark.py  decimal_order_benchmark.py  memory_overhead_benchmark.py  profile_decimal_backtest.py
benchmarks/results/: decimal_backtest.json  decimal_backtest.prof  hotspots.txt
development/ci-cd-pipeline/: index.html
development/rust-setup/: index.html
docs/: CI_CD_FIX_PLAN.md  INDEX.md  architecture.md  caching-system.md  index.md  prd.md  security-audit.md
docs/about/: contributing.md
docs/api/: analytics-api.md  bundle-metadata-api.md  caching-api.md  datasource-api.md  finance-api.md  live-trading-api.md  optimization-api.md
docs/architecture/: component-architecture.md  enhancement-scope-and-integration-strategy.md  epic-6-critical-docs-reference.md  index.md  live-trading.md  next-steps.md  optimization.md  strategy-reusability-guarantee.md  tech-stack.md  testing-strategy.md  zero-mock-enforcement.md
docs/development/: rust-setup.md
docs/examples/: README.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: broker-setup-guide.md  caching-guide.md  creating-data-adapters.md  csv-data-import.md  data-ingestion.md  (+11 more)
examples/: README.md  allocation_algorithms_tutorial.py  attribution_analysis_example.py  backtest_paper_full_validation.py  backtest_with_cache.py  borrow_cost_tutorial.py  cache_warming.py  crypto_backtest_ccxt.ipynb  custom_broker_adapter.py  custom_data_adapter.py  generate_backtest_report.py  index.html  latency_simulation_tutorial.py  live_trading.py  live_trading_simple.py  overnight_financing_tutorial.py  paper_trading_simple.py  paper_trading_validation.py  pipeline_tutorial.py  portfolio_allocator_tutorial.py  rust_optimized_indicators.py  shadow_trading_dashboard.py  shadow_trading_simple.py  slippage_models_tutorial.py  websocket_streaming.py
experiments/: index.html
performance/: dashboard.html  index.html
pr/: index.html
prd/: index.html
rustybt/: __init__.py  __main__.py  _version.py  algorithm.py  errors.py  rust_optimizations.py  test_algorithms.py
scripts/: api_verification_report.json  build_rust.sh  check_licenses.py  migrate_catalog_to_unified.py  property_test_coverage.py  verify_documented_apis.py
security-audit/: index.html
tests/: conftest.py  test_algorithm.py  test_api_shim.py  test_assets.py  test_bar_data.py  test_benchmark.py  test_blotter.py  test_clock.py  test_cmdline.py  test_continuous_futures.py  test_data_portal.py  test_examples.py  test_exceptions.py  test_execution_styles.py  test_fetcher.py  test_finance.py  test_history.py  test_labelarray.py  test_memoize.py  test_ordering.py  test_registration_manager.py  test_restrictions.py  test_security_list.py  test_testing.py  test_tradesimulation.py
(+872 files in other folders)
